sam.nim


proc bam_endpos*(b: ptr bam1_t): int32_t {.cdecl, importc: "bam_endpos", header: "sam.h".}
proc bam_str2flag*(str: cstring): cint {.cdecl, importc: "bam_str2flag",
                                     header: "sam.h".}
## * returns negative value on error

proc bam_flag2str*(flag: cint): cstring {.cdecl, importc: "bam_flag2str",
                                      header: "sam.h".}
## * The string must be freed by the user
## ************************
## ** BAM/CRAM indexing ***
## ***********************
##  These BAM iterator functions work only on BAM files.  To work with either
##  BAM or CRAM files use the sam_index_load() & sam_itr_*() functions.

template bam_itr_destroy*(iter: untyped): untyped =
  hts_itr_destroy(iter)

template bam_itr_queryi*(idx, tid, beg, `end`: untyped): untyped =
  sam_itr_queryi(idx, tid, beg, `end`)

template bam_itr_querys*(idx, hdr, region: untyped): untyped =
  sam_itr_querys(idx, hdr, region)

template bam_itr_next*(htsfp, itr, r: untyped): untyped =
  hts_itr_next((htsfp).fp.bgzf, (itr), (r), 0)

##  Load .csi or .bai BAM index file.

template bam_index_load*(fn: untyped): untyped =
  hts_idx_load((fn), HTS_FMT_BAI)

proc bam_index_build*(fn: cstring; min_shift: cint): cint {.cdecl,
    importc: "bam_index_build", header: "sam.h".}
##  Load BAM (.csi or .bai) or CRAM (.crai) index file.

proc sam_index_load*(fp: ptr htsFile; fn: cstring): ptr hts_idx_t {.cdecl,
    importc: "sam_index_load", header: "sam.h".}
template sam_itr_destroy*(iter: untyped): untyped =
  hts_itr_destroy(iter)

proc sam_itr_queryi*(idx: ptr hts_idx_t; tid: cint; beg: cint; `end`: cint): ptr hts_itr_t {.
    cdecl, importc: "sam_itr_queryi", header: "sam.h".}
proc sam_itr_querys*(idx: ptr hts_idx_t; hdr: ptr bam_hdr_t; region: cstring): ptr hts_itr_t {.
    cdecl, importc: "sam_itr_querys", header: "sam.h".}
template sam_itr_next*(htsfp, itr, r: untyped): untyped =
  hts_itr_next((htsfp).fp.bgzf, (itr), (r), (htsfp))

## **************
## ** SAM I/O ***
## *************

template sam_open*(fn, mode: untyped): untyped =
  (hts_open((fn), (mode)))

template sam_close*(fp: untyped): untyped =
  hts_close(fp)

proc sam_open_mode*(mode: cstring; fn: cstring; format: cstring): cint {.cdecl,
    importc: "sam_open_mode", header: "sam.h".}
type
  samFile* = htsFile

proc sam_hdr_parse*(l_text: cint; text: cstring): ptr bam_hdr_t {.cdecl,
    importc: "sam_hdr_parse", header: "sam.h".}
proc sam_hdr_read*(fp: ptr samFile): ptr bam_hdr_t {.cdecl, importc: "sam_hdr_read",
    header: "sam.h".}
proc sam_hdr_write*(fp: ptr samFile; h: ptr bam_hdr_t): cint {.cdecl,
    importc: "sam_hdr_write", header: "sam.h".}
proc sam_parse1*(s: ptr kstring_t; h: ptr bam_hdr_t; b: ptr bam1_t): cint {.cdecl,
    importc: "sam_parse1", header: "sam.h".}
proc sam_format1*(h: ptr bam_hdr_t; b: ptr bam1_t; str: ptr kstring_t): cint {.cdecl,
    importc: "sam_format1", header: "sam.h".}
proc sam_read1*(fp: ptr samFile; h: ptr bam_hdr_t; b: ptr bam1_t): cint {.cdecl,
    importc: "sam_read1", header: "sam.h".}
proc sam_write1*(fp: ptr samFile; h: ptr bam_hdr_t; b: ptr bam1_t): cint {.cdecl,
    importc: "sam_write1", header: "sam.h".}
## ************************************
## ** Manipulating auxiliary fields ***
## ***********************************

proc bam_aux_get*(b: ptr bam1_t; tag: array[2, char]): ptr uint8_t {.cdecl,
    importc: "bam_aux_get", header: "sam.h".}
proc bam_aux2i*(s: ptr uint8_t): int32_t {.cdecl, importc: "bam_aux2i", header: "sam.h".}
proc bam_aux2f*(s: ptr uint8_t): cdouble {.cdecl, importc: "bam_aux2f", header: "sam.h".}
proc bam_aux2A*(s: ptr uint8_t): char {.cdecl, importc: "bam_aux2A", header: "sam.h".}
proc bam_aux2Z*(s: ptr uint8_t): cstring {.cdecl, importc: "bam_aux2Z", header: "sam.h".}
proc bam_aux_append*(b: ptr bam1_t; tag: array[2, char]; `type`: char; len: cint;
                    data: ptr uint8_t) {.cdecl, importc: "bam_aux_append",
                                      header: "sam.h".}
proc bam_aux_del*(b: ptr bam1_t; s: ptr uint8_t): cint {.cdecl, importc: "bam_aux_del",
    header: "sam.h".}
## *************************
## ** Pileup and Mpileup ***
## ************************

when not defined(BAM_NO_PILEUP):
  ## ! @typedef
  ##  @abstract Structure for one alignment covering the pileup position.
  ##  @field  b          pointer to the alignment
  ##  @field  qpos       position of the read base at the pileup site, 0-based
  ##  @field  indel      indel length; 0 for no indel, positive for ins and negative for del
  ##  @field  level      the level of the read in the "viewer" mode
  ##  @field  is_del     1 iff the base on the padded read is a deletion
  ##  @field  is_head    ???
  ##  @field  is_tail    ???
  ##  @field  is_refskip ???
  ##  @field  aux        ???
  ## 
  ##  @discussion See also bam_plbuf_push() and bam_lplbuf_push(). The
  ##  difference between the two functions is that the former does not
  ##  set bam_pileup1_t::level, while the later does. Level helps the
  ##  implementation of alignment viewers, but calculating this has some
  ##  overhead.
  ## 
  type
    bam_pileup1_t* {.importc: "bam_pileup1_t", header: "sam.h".} = object
      b* {.importc: "b".}: ptr bam1_t
      qpos* {.importc: "qpos".}: int32_t
      indel* {.importc: "indel".}: cint
      level* {.importc: "level".}: cint
      is_del* {.importc: "is_del".} {.bitsize: 1.}: uint32_t
      is_head* {.importc: "is_head".} {.bitsize: 1.}: uint32_t
      is_tail* {.importc: "is_tail".} {.bitsize: 1.}: uint32_t
      is_refskip* {.importc: "is_refskip".} {.bitsize: 1.}: uint32_t
      aux* {.importc: "aux".} {.bitsize: 28.}: uint32_t

    bam_plp_auto_f* = proc (data: pointer; b: ptr bam1_t): cint {.cdecl.}
  type
    __bam_plp_t* {.importc: "__bam_plp_t", header: "sam.h".} = object
    
  type
    bam_plp_t* = ptr __bam_plp_t
  type
    __bam_mplp_t* {.importc: "__bam_mplp_t", header: "sam.h".} = object
    
  type
    bam_mplp_t* = ptr __bam_mplp_t
  ## *
  ##   bam_plp_init() - sets an iterator over multiple
  ##   @func:      see mplp_func in bam_plcmd.c in samtools for an example. Expected return
  ##               status: 0 on success, -1 on end, < -1 on non-recoverable errors
  ##   @data:      user data to pass to @func
  ## 
  proc bam_plp_init*(`func`: bam_plp_auto_f; data: pointer): bam_plp_t {.cdecl,
      importc: "bam_plp_init", header: "sam.h".}
  proc bam_plp_destroy*(iter: bam_plp_t) {.cdecl, importc: "bam_plp_destroy",
                                        header: "sam.h".}
  proc bam_plp_push*(iter: bam_plp_t; b: ptr bam1_t): cint {.cdecl,
      importc: "bam_plp_push", header: "sam.h".}
  proc bam_plp_next*(iter: bam_plp_t; _tid: ptr cint; _pos: ptr cint; _n_plp: ptr cint): ptr bam_pileup1_t {.
      cdecl, importc: "bam_plp_next", header: "sam.h".}
  proc bam_plp_auto*(iter: bam_plp_t; _tid: ptr cint; _pos: ptr cint; _n_plp: ptr cint): ptr bam_pileup1_t {.
      cdecl, importc: "bam_plp_auto", header: "sam.h".}
  proc bam_plp_set_maxcnt*(iter: bam_plp_t; maxcnt: cint) {.cdecl,
      importc: "bam_plp_set_maxcnt", header: "sam.h".}
  proc bam_plp_reset*(iter: bam_plp_t) {.cdecl, importc: "bam_plp_reset",
                                      header: "sam.h".}
  proc bam_mplp_init*(n: cint; `func`: bam_plp_auto_f; data: ptr pointer): bam_mplp_t {.
      cdecl, importc: "bam_mplp_init", header: "sam.h".}
  ## *
  ##   bam_mplp_init_overlaps() - if called, mpileup will detect overlapping
  ##   read pairs and for each base pair set the base quality of the
  ##   lower-quality base to zero, thus effectively discarding it from
  ##   calling. If the two bases are identical, the quality of the other base
  ##   is increased to the sum of their qualities (capped at 200), otherwise
  ##   it is multiplied by 0.8.
  ## 
  proc bam_mplp_init_overlaps*(iter: bam_mplp_t) {.cdecl,
      importc: "bam_mplp_init_overlaps", header: "sam.h".}
  proc bam_mplp_destroy*(iter: bam_mplp_t) {.cdecl, importc: "bam_mplp_destroy",
      header: "sam.h".}
  proc bam_mplp_set_maxcnt*(iter: bam_mplp_t; maxcnt: cint) {.cdecl,
      importc: "bam_mplp_set_maxcnt", header: "sam.h".}
  proc bam_mplp_auto*(iter: bam_mplp_t; _tid: ptr cint; _pos: ptr cint; n_plp: ptr cint;
                     plp: ptr ptr bam_pileup1_t): cint {.cdecl,
      importc: "bam_mplp_auto", header: "sam.h".}
